--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "server.js",
   "scripts": {
     "start:dev": "concurrently \"cd client && npm run build\" \"cd server && npm run server\"",
-    "start": "npm run build && cd server && nodemon server.js",
-    "server": "cd server && nodemon server.js --ignore ../client",
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server && node server.js --ignore ../client",
     "build": "cd client && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
-    "client": "cd client && npm start"
+    "client": "cd client && npm start",
+    "dev": "cd client && npm run dev"
   },
   "keywords": [],
   "author": "",
